--- a/salon_frontend/package.json
+++ b/salon_frontend/package.json
@@ -18,15 +18,19 @@
     "@react-pdf/renderer": "^4.3.2",
     "@tailwindcss/vite": "^4.2.0",
     "axios": "^1.13.5",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.34.3",
     "html2canvas": "^1.4.1",
     "jspdf": "^4.2.0",
     "lenis": "^1.3.17",
     "lucide-react": "^0.575.0",
+    "radix-ui": "^1.4.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.13.0",
-    "recharts": "^3.7.0"
+    "recharts": "^3.7.0",
+    "tailwind-merge": "^3.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
@@ -39,7 +43,9 @@
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
     "postcss": "^8.5.6",
+    "shadcn": "^3.8.5",
     "tailwindcss": "^4.2.0",
+    "tw-animate-css": "^1.4.0",
     "vite": "^7.3.1"
   }
 }
