--- a/salon_frontend/package.json
+++ b/salon_frontend/package.json
@@ -23,6 +23,8 @@
     "file-saver": "^2.0.5",
     "framer-motion": "^12.34.3",
     "html2canvas": "^1.4.1",
+    "html5-qrcode": "^2.3.8",
+    "jsbarcode": "^3.12.3",
     "jspdf": "^4.2.0",
     "lenis": "^1.3.17",
     "lucide-react": "^0.575.0",
